--- a/user-interface.html
+++ b/user-interface.html
@@ -26,9 +26,9 @@
 
 <div class="ui teal inverted segment"><h1 class="ui left aligned header">Event Planner</h1></div>
 <div class="ui container">
-  <div class="ui raised segment" action="">
+  <div class="ui raised very padded segment">
     <form class="ui form">
-      <div class="field">
+<div class="field">
         <div class="ui grid">
           <div class="twelve wide column">
             <div class="ui transparent massive input">
@@ -44,20 +44,22 @@
           <div class="two wide column">
             <label>Priority</label>
             <select class="ui dropdown" id="event-priority">
-              <option value="9">Low</option><option value="5">Medium</option><option value="1">High</option>
+              <option style="display: none;" disabled selected></option>
+              <option value="9">Low</option>
+              <option value="5">Medium</option>
+              <option value="1">High</option>
             </select>
           </div>
         </div>
-      </div>
-      <div class="ui section divider"></div>
-      <div class="field">
+</div>
+<div class="ui section divider" style="padding-top: 10px; padding-bottom: 10px"></div>
+<div class="field">
         <div class="ui grid">
           <div class="four wide column">
             <label>Start</label>
-            <div class="ui calendar" id="event-start" >
+            <div class="ui calendar" id="event-start">
               <div class="ui input left icon">
-                <i class="calendar icon"></i>
-                <input type="text" placeholder="Date/Time">
+                <i class="calendar icon"></i><input type="text" placeholder="Date/Time">
               </div>
             </div>
           </div>
@@ -65,44 +67,68 @@
             <label>End</label>
             <div class="ui calendar" id="event-end" >
               <div class="ui input left icon">
-                <i class="calendar icon"></i>
-                <input type="text" placeholder="Date/Time">
+                <i class="calendar icon"></i><input type="text" placeholder="Date/Time">
               </div>
             </div>
           </div>
-          <div class="four wide column"><label>Timezone</label><select class="ui dropdown" id="timezone-dropdown"> </select></div>
+          <div class="three wide column"><label>Timezone</label><select class="ui dropdown" id="timezone-dropdown"></select></div>
         </div>
-      </div>
-      <div class="ui section divider"></div>
-      <div class="field"><label>Venue</label><input type="text" id="event-venue" placeholder="Auditorium"></div>
-      <div class="field">
+</div>
+<div class="ui section divider" style="padding-top: 10px; padding-bottom: 10px"></div>
+<div class="field">
+        <label>Venue</label><input type="text" id="event-venue" placeholder="Auditorium">
+</div>
+<div class="field">
         <label>Address</label>
         <div class="ui accordion">
           <div class="title">
             <div class="ui grid">
               <div class="fifteen wide column">
-                <input type="text" name="last-name" id="event-address" placeholder="Click button on right" disabled>
+                <input type="text" id="event-address" placeholder="Click button on right" disabled>
               </div>
-              <div
-                class="one wide column"><div
-                class="ui icon large circular button"><i class="angle double down icon"></i></div></div>
+              <div class="one wide column">
+                <div class="ui icon large circular button"><i class="angle double down icon"></i></div>
+              </div>
             </div>
           </div>
           <div class="content">
-            <div class="ui form">
-              <div class="field"><label>Street Number and Name</label><input type="text" placeholder="1234 Abcd Avenue"></div>
-              <div class="field"><label>Apt/Suite/Unit</label><input type="text" placeholder="1601"></div>
-              <div class="field"><label>City</label><input type="text" placeholder="Honolulu"></div>
-              <div class="field"><label>State/Province/Region</label><input type="text" placeholder="Hawaii"></div>
-              <div class="field"><label>Postal/Zip Code</label><input type="text" placeholder="12345"></div>
+            <div class="ui padded basic segment">
+              <div class="ui form">
+                <div class="field">
+                  <div class="ui grid">
+                    <div class="fourteen wide column">
+                      <label>Street Number and Name</label><input id="address-street" type="text" placeholder="1234 Abcd Avenue">
+                    </div>
+                    <div class="two wide column">
+                      <label>Apt/Suite/Unit</label><input type="text" placeholder="1601" id="address-apt">
+                    </div>
+                  </div>
+                </div>
+                <div class="ui field">
+                  <div class="ui grid">
+                    <div class="ten wide column">
+                      <label>City</label><input type="text" id="address-city" placeholder="Honolulu">
+                    </div>
+                    <div class="four wide column">
+                      <label>State</label><select class="ui dropdown" id="address-state"> </select>
+                    </div>
+                    <div class="two wide column">
+                      <label>Zip Code</label><input id="address-zip" type="text" placeholder="12345">
+                    </div>
+                  </div>
+                </div>
+                <div class="small ui button" onclick="addressDisplay()">Confirm</div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="ui section divider"></div>
-      <div class="field"><label>Description:</label><textarea id="event-description"></textarea>
-      </div>
-      <button class="large ui teal button" type="submit" onclick="downloadFile('sample.txt')"><i class="download icon"></i>
+</div>
+<div class="ui section divider" style="padding-top: 10px; padding-bottom: 10px"></div>
+<div class="field">
+        <label>Description:</label>
+        <textarea id="event-description"></textarea>
+</div>
+      <button class="large ui teal button" onclick="downloadFile('sample.txt')"><i class="download icon"></i>
         Generate
       </button>
     </form>
@@ -114,15 +140,81 @@
   $('.ui.calendar').calendar();
 
   var timezoneArray = moment.tz.names();
-  var dropdownItems = "";
+  var timezoneItems = "";
   for (var i = 0; i < timezoneArray.length; i++) {
     if (timezoneArray[i] == "HST") {
-      dropdownItems += "<option value='" + timezoneArray[i] + "' selected>" + timezoneArray[i] + "</option>";
+      timezoneItems += "<option value='" + timezoneArray[i] + "' selected>" + timezoneArray[i] + "</option>";
     } else {
-      dropdownItems += "<option value='" + timezoneArray[i] + "'>" + timezoneArray[i] + "</option>";
+      timezoneItems += "<option value='" + timezoneArray[i] + "'>" + timezoneArray[i] + "</option>";
     }
   }
-  document.getElementById("timezone-dropdown").innerHTML = dropdownItems;
+  document.getElementById("timezone-dropdown").innerHTML = timezoneItems;
+
+  function addressDisplay() {
+    var state =
+      document.getElementById('address-state')[document.getElementById('address-state').selectedIndex].value;
+    var addressString = document.getElementById("address-street").value + ", "
+      + document.getElementById("address-apt").value + ", "
+      + document.getElementById("address-city").value + ", "
+      + state + ", "
+      + document.getElementById("address-zip").value;
+    document.getElementById("event-address").value = addressString;
+    $('.ui.accordion').accordion('close', 0);
+  }
+
+  var stateItems =
+    "<option value=\"AL\">Alabama</option>" +
+    "<option value=\"AK\">Alaska</option>" +
+    "<option value=\"AZ\">Arizona</option>" +
+    "<option value=\"AR\">Arkansas</option>" +
+    "<option value=\"CA\">California</option>" +
+    "<option value=\"CO\">Colorado</option>" +
+    "<option value=\"CT\">Connecticut</option>" +
+    "<option value=\"DE\">Delaware</option>" +
+    "<option value=\"DC\">District Of Columbia</option>" +
+    "<option value=\"FL\">Florida</option>" +
+    "<option value=\"GA\">Georgia</option>" +
+    "<option value=\"HI\" selected>Hawaii</option>" +
+    "<option value=\"ID\">Idaho</option>" +
+    "<option value=\"IL\">Illinois</option>" +
+    "<option value=\"IN\">Indiana</option>" +
+    "<option value=\"IA\">Iowa</option>" +
+    "<option value=\"KS\">Kansas</option>" +
+    "<option value=\"KY\">Kentucky</option>" +
+    "<option value=\"LA\">Louisiana</option>" +
+    "<option value=\"ME\">Maine</option>" +
+    "<option value=\"MD\">Maryland</option>" +
+    "<option value=\"MA\">Massachusetts</option>" +
+    "<option value=\"MI\">Michigan</option>" +
+    "<option value=\"MN\">Minnesota</option>" +
+    "<option value=\"MS\">Mississippi</option>" +
+    "<option value=\"MO\">Missouri</option>" +
+    "<option value=\"MT\">Montana</option>" +
+    "<option value=\"NE\">Nebraska</option>" +
+    "<option value=\"NV\">Nevada</option>" +
+    "<option value=\"NH\">New Hampshire</option>" +
+    "<option value=\"NJ\">New Jersey</option>" +
+    "<option value=\"NM\">New Mexico</option>" +
+    "<option value=\"NY\">New York</option>" +
+    "<option value=\"NC\">North Carolina</option>" +
+    "<option value=\"ND\">North Dakota</option>" +
+    "<option value=\"OH\">Ohio</option>" +
+    "<option value=\"OK\">Oklahoma</option>" +
+    "<option value=\"OR\">Oregon</option>" +
+    "<option value=\"PA\">Pennsylvania</option>" +
+    "<option value=\"RI\">Rhode Island</option>" +
+    "<option value=\"SC\">South Carolina</option>" +
+    "<option value=\"SD\">South Dakota</option>" +
+    "<option value=\"TN\">Tennessee</option>" +
+    "<option value=\"TX\">Texas</option>" +
+    "<option value=\"UT\">Utah</option>" +
+    "<option value=\"VT\">Vermont</option>" +
+    "<option value=\"VA\">Virginia</option>" +
+    "<option value=\"WA\">Washington</option>" +
+    "<option value=\"WV\">West Virginia</option>" +
+    "<option value=\"WI\">Wisconsin</option>" +
+    "<option value=\"WY\">Wyoming</option>";
+  document.getElementById("address-state").innerHTML = stateItems;
 </script>
 
 </body>
