--- a/html/user-interface.html
+++ b/html/user-interface.html
@@ -18,10 +18,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.13/moment-timezone.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.13/moment-timezone-with-data-2012-2022.min.js"></script>
   <!--Javascript-->
-  <script src="sampleDownload.js"></script>
-  <!--for unit testing (assertion library)-->
-  <script src="chai.js" type="text/javascript"></script>
-  <script src="fileGenerator.js"></script>
+  <script src="../javascript/sampleDownload.js"></script>
+  <script src="../javascript/fileGenerator.js"></script>
 </head>
 
 
