--- a/html/user-interface.html
+++ b/html/user-interface.html
@@ -20,6 +20,7 @@
   <!--Javascript-->
   <script src="../javascript/sampleDownload.js"></script>
   <script src="../javascript/fileGenerator.js"></script>
+  <script src="../javascript/formValidation.js"></script>
 </head>
 
 
@@ -140,21 +141,6 @@
   $('.ui.accordion').accordion({ selector: { trigger: '.title .ui.button' } });
   $('.ui.calendar').calendar();
 
-  var sdate = null;
-  var edate = null;
-
-  $('#event-start').calendar({
-    onChange: function (date, text) {
-      sdate = text;
-    },
-  });
-
-  $('#event-end').calendar({
-    onChange: function (date, text) {
-      edate = text;
-    },
-  });
-
   var timezoneArray = moment.tz.names();
   var timezoneItems = "";
   for (var i = 0; i < timezoneArray.length; i++) {
@@ -165,75 +151,6 @@
     }
   }
   document.getElementById("timezone-dropdown").innerHTML = timezoneItems;
-
-  function addressDisplay() {
-    var state =
-        document.getElementById('address-state')[document.getElementById('address-state').selectedIndex].value;
-    var addressString = document.getElementById("address-street").value + ", "
-        + document.getElementById("address-apt").value + ", "
-        + document.getElementById("address-city").value + ", "
-        + state + ", "
-        + document.getElementById("address-zip").value;
-    document.getElementById("event-address").value = addressString;
-    $('.ui.accordion').accordion('close', 0);
-  }
-
-
-
-  function checkInput() {
-
-    var valid = true;
-    var title = document.getElementById("event-title").value;
-    var venue = document.getElementById("event-venue").value;
-    var address = document.getElementById("event-address").value;
-    var description = document.getElementById("event-description").value;
-
-    // code to make start date into a string for .ics file
-    var startDate = new Date(sdate).toISOString();
-    var finalSDate = startDate.substr(0,4) + startDate.substr(5,2) + startDate.substr(8,2) + 'T'  + startDate.substr(11,2)
-        + startDate.substr(14,2) + startDate.substr(17,2);
-    var compareStart = new Date(sdate).getTime();
-
-    // code to make start date into a string for .ics file
-    var endDate = new Date(edate).toISOString();
-    var finalEDate = endDate.substr(0,4) + endDate.substr(5,2) + endDate.substr(8,2) + 'T'  + endDate.substr(11,2)
-        + endDate.substr(14,2) + endDate.substr(17,2);
-    var compareEnd = new Date(edate).getTime();
-
-
-    console.log('info for start date:')
-    console.log(sdate);
-    console.log(startDate);
-    console.log(finalSDate);
-
-    console.log('info for end date:')
-    console.log(edate);
-    console.log(endDate);
-    console.log(finalEDate);
-
-    //check parameters.
-    if(sdate === null | edate === null) {
-      valid = false;
-      alert('There must be a start and end to the event');
-    } else if(compareStart > compareEnd){
-      valid = false;
-      alert('start time must be before end time');
-    } else if(title === ''){
-      valid = false;
-      alert('There must be a title');
-    } else if(venue === ''){
-      valid = false;
-      alert('There must be a venue');
-    } else if(address === ''){
-      valid = false;
-      alert('There must be a address \n*pleae make sure to confirm address*');
-    } else if(description === ''){
-      valid = false;
-      alert('There must be a description');
-    } else if (valid === true) {
-      generateFile('calendar.ics', title, finalSDate, finalEDate, address, description);
-    }
-  }
 
   var stateItems =
       "<option value=\"AL\">Alabama</option>" +
